2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* entry.c (vector_table): Since IDLE thread runs with PSP now, use
	different value for MSP.

	* chopstx.c (chx_sched): Push LR value to PC slot on stack, so
	that it returns directly to caller.

2016-04-06  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (struct chx_pq): New struct for priority queue.
	(struct chx_px): New struct for proxy.
	(struct chx_thread): New member FLAG_IS_PROXY.
	(ll_dequeue, ll_insert, ll_pop, ll_prio_push, ll_prio_enqueue)
	Change API.
	(THREAD_WAIT_POLL): New thread status.
	(chx_ready_pop, chx_ready_push, chx_ready_enqueue): Type coercion.
	(chx_timer_insert, chx_timer_dequeue, chx_timer_expired): Use
	chx_pq.
	(chx_handle_intr, chopstx_cancel): Handle THREAD_WAIT_POLL.
	(chx_init): Type coercion.
	(chx_exit): Handle proxy for join.
	(chopstx_create): Initialize the member FLAG_IS_PROXY.
	(chopstx_cond_signal) Handle proxy.
	(chx_proxy_init, chopstx_poll): New.

2016-04-06  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.h (struct chx_qh): New struct.

	* chopstx.c (struct chx_queue): Use chx_qh.
	(struct chx_thread): New member PARENT.
	(ll_empty): Use chx_qh.
	(ll_prio_push, ll_prio_enqueue): Set the member PARENT.
	(chx_ready_pop, chx_ready_push, chx_ready_enqueue): Use the
	member Q.
	(chx_timer_insert): Return TP.
	(chx_timer_dequeue, chx_timer_expired): Use the member Q.
	(chx_init): Initialize change for Q_READY, Q_TIMER, Q_JOIN.
	(chx_sched, preempt): Handle return value of chx_timer_insert.
	(chx_exit, chopstx_mutex_init, chopstx_cond_init): Use the member Q.
	(chx_mutex_unlock): Type coercion to CHX_THREAD.
	(chopstx_create): Initialize PARENT field.
	(chopstx_mutex_lock): Use the PARENT field.
	(chopstx_join): Use ll_prio_enqueue, instead of ll_insert.
	(chopstx_wakeup_usec_wait): Set REG_R0 on the stack.

2016-04-06  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (struct chx_thread): Move tcontext field.
	(chx_cpu_sched_lock, chx_cpu_sched_unlock): Use CPSID/CPSIE.